<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/cl_add_pass"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_select_btn_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tv_select_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tool:text="ADD DAY PASS" />

    <View
        android:id="@+id/line_title"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="13dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_select_title" />

    <View
        android:id="@+id/line_content"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/tv_select_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_select_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="Cancel"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/gl_select_btn_end"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_select_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="Confirm"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gl_select_btn_end" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_select_dialog"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:overScrollMode="never"
        android:paddingVertical="3dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/line_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_title"
        tool:listitem="@layout/item_dialog_select" />

    <View
        android:id="@+id/line_top"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="45dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/line_title" />

    <View
        android:id="@+id/line_bottom"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="88dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/line_title" />

</androidx.constraintlayout.widget.ConstraintLayout>