...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_pass_name"
                app:layout_constraintTop_toBottomOf="@id/tv_pass_name"
                tools:text="Rp 2.000" />

            <Button
                android:id="@+id/btn_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
